kubernetes/eks/baseline/addons/aws_load_balancer_controller/demos/cli/02.ing_alb/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  name: demo-alb-app
  namespace: demo-alb
spec:
  rules:
  - host: demo.example.com
    http:
      paths:
      - backend:
          service:
            name: demo-alb-app
            port:
              number: 80
        path: /
        pathType: Prefix
